# ze-din-din

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  relatorio_desenvolvimento_sprint_1.txt  relatorio_desenvolvimento_sprint_10.txt  relatorio_desenvolvimento_sprint_2.txt  relatorio_desenvolvimento_sprint_3.txt  relatorio_desenvolvimento_sprint_4.txt  relatorio_desenvolvimento_sprint_5.txt  relatorio_desenvolvimento_sprint_6.txt  relatorio_desenvolvimento_sprint_7.txt  relatorio_desenvolvimento_sprint_8.txt  relatorio_desenvolvimento_sprint_9.txt  requirements-dev.txt  requirements.txt  run.py
.claude/: settings.local.json
api/: index.py
app/: __init__.py  config.py  extensions.py
app/accounts/: __init__.py  forms.py  routes.py  services.py
app/auth/: forms.py  routes.py  services.py
app/bills/: __init__.py  forms.py  routes.py  services.py
app/budgets/: __init__.py  forms.py  routes.py  services.py
app/categories/: __init__.py  forms.py  routes.py  services.py
app/dashboard/: __init__.py  routes.py  services.py
app/families/: __init__.py  forms.py  routes.py  services.py
app/goals/: __init__.py  forms.py  routes.py  services.py
docker/: init.sql
docs/: architecture.md  business-rules.md  database.md  roadmap.md  security.md
tests/: conftest.py  test_accounts.py  test_auth.py  test_bills.py  test_budgets.py  test_categories.py  test_dashboard.py  test_families.py  test_goals.py  test_money.py  test_reports.py  test_transactions.py
(+67 files in other folders)
