[project]
name = "ze-din-din"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.2",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "email-validator==2.2.0",
    "gunicorn==23.0.0",
    "Werkzeug==3.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    migrations
  | .venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["migrations", ".venv"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["app"]
omit = ["app/models/__init__.py", "migrations/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
